--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -8,15 +8,10 @@
 </head>
 <body>
     <div class="reveal">
-        <div class="slides">
-            <section data-markdown>
-                <textarea data-template>
-                    # Hello, Reveal.js!
-                    - Point 1
-                    - Point 2
-                </textarea>
-            </section>
-        </div>
+      <div class="slides">
+        <!-- Use the "slot" feature to insert arbitrary HTML content -->
+        <slot />
+      </div>
     </div>
     <script type="module">
         // Import the Reveal.js module
