--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,6 +45,7 @@ const { title, description = "Default description if none provided", image = "/d
 
   <!-- Additional tags for improved accessibility -->
   <meta name="theme-color" content="#ffffff"/> <!-- Adjust the color to match your site's theme -->
+  <link rel="stylesheet" href="../styles/global.css">
 </head>
 <body>
   <slot />
