--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -24,7 +24,9 @@
           let deck = new Reveal({
             plugins: [ Markdown ]
           });
-          deck.initialize();
+          deck.initialize({
+            disableLayout: true
+          });
         });
       </script>      
 </body>
