--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -4,7 +4,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
-    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
+<!--    <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css"> -->
 </head>
 <body>
     <div class="reveal">
@@ -25,7 +25,8 @@
             plugins: [ Markdown ]
           });
           deck.initialize({
-            disableLayout: true
+            disableLayout: true,
+            view: "scroll",
           });
         });
       </script>      
