--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,18 +2,16 @@
 import Layout from '../layouts/Layout.astro';
 
 // Define metadata and navigation links for this page
-const title = "About Us";
+const title = "Mends";
 const description = "Learn more about our company and values.";
 const navLinks = [
-  { text: 'Motivation', href: '/' },
-  { text: 'Empathy', href: '/about' },
-  { text: 'Nimbleness', href: '/services' },
-  { text: 'Diversity', href: '/contact' },
-  { text: 'Sustainability', href: '/contact' },
+  { text: 'Motivation', href: '#' },
+  { text: 'Empathy', href: '#' },
+  { text: 'Nimbleness', href: '#' },
+  { text: 'Diversity', href: '#' },
+  { text: 'Sustainability', href: '#' },
 ];
 ---
 
 <Layout title={title} description={description} navLinks={navLinks}>
-  <h1>About Our Company</h1>
-  <p>Welcome to our about page. Here's a little bit about us...</p>
 </Layout>
