--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,5 +13,4 @@ const navLinks = [
 ];
 ---
 
-<Layout title={title} description={description} navLinks={navLinks}>
-</Layout>
+<Layout title={title} description={description} navLinks={navLinks}></Layout>
