--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ const navLinks: NavLink[] = Astro.props.navLinks;
 <header class="bg-white shadow-lg">
   <div class="container mx-auto flex justify-between items-center p-5">
     <!-- Logo Component with a desired height of 100 -->
-    <Logo desiredHeight={100} />
+    <Logo />
 
     <!-- Navigation Component with navigation links passed as props -->
     <Navigation navLinks={navLinks} />
