--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,15 +6,20 @@ type NavLink = {
 };
 
 // Retrieve `navLinks` from props
-const navLinks: NavLink[] = Astro.props.navLinks;  
+const navLinks: NavLink[] = Astro.props.navLinks;
 ---
 
-<nav>
+<button class="peer"> <div class="h-12 w-12 bg-slate-600"/></button>
+<nav class="hidden peer-focus:flex fixed inset-0 bg-opacity-0 bg-transparent peer-focus:bg-black peer-focus:bg-opacity-75 justify-center items-center z-50 duration-3000 ease-in-out transition-all">
   <ul class="flex space-x-6">
-    {navLinks.map((link) => (
-      <li class="first-letter:text-2xl leading-none font-bodyv font-bold uppercase text-lg text-matisse-600 hover:text-hippie-blue-400 transition-colors hover:transition-colors">
-        <a href={link.href} class="">{link.text}</a>
-      </li>
-    ))}
-      </ul>
+    {
+      navLinks.map((link) => (
+        <li class="font-body font-bold uppercase text-lg text-matisse-600 hover:text-hippie-blue-400 transition-colors hover:transition-colors">
+          <a href={link.href} class="">
+            {link.text}
+          </a>
+        </li>
+      ))
+    }
+  </ul>
 </nav>
