--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,4 +13,6 @@ const navLinks = [
 ];
 ---
 
-<Layout title={title} description={description} navLinks={navLinks}></Layout>
+<Layout title={title} description={description} navLinks={navLinks}>
+	asdf
+</Layout>
