--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const navLinks: NavLink[] = Astro.props.navLinks;
 ---
 
 <!-- Header Component -->
-<header class="bg-white shadow-lg">
+<header class="bg-white">
   <div class="container mx-auto flex justify-between items-center p-5">
     <!-- Logo Component with a desired height of 100 -->
     <Logo />
