--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,15 @@
-<footer>
-    lorem ipsum
+<footer class="col-span-2">
+    <div class="flex justify-between items-center p-6">
+        <div>
+          <h3 class="text-lg font-bold">Company Name</h3>
+          <p class="text-sm">© 2024 Company Name. All rights reserved.</p>
+        </div>
+        <div class="flex space-x-4">
+          <!-- Social icons or links -->
+          <a href="#" class="hover:text-blue-400">Twitter</a>
+          <a href="#" class="hover:text-blue-600">Facebook</a>
+          <a href="#" class="hover:text-red-600">Instagram</a>
+        </div>
+      </div>
+    
 </footer>
