--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,15 @@
 ---
 // Import components
 import Logo from './Logo.astro';
-import Navigation from './Navigation.astro';
-
-// Define the type for navigation links
-type NavLink = {
-  text: string;
-  href: string;
-};
-
-// Retrieve `navLinks` from props
-const navLinks: NavLink[] = Astro.props.navLinks;
 ---
 
 <!-- Header Component -->
-<header class="bg-white">
-  <div class="container mx-auto flex justify-between items-center p-5">
+<header class="row-span-1 col-span-1 w-full">
+  <div class="flex justify-between items-center p-6">
     <!-- Logo Component with a desired height of 100 -->
     <Logo />
 
     <!-- Navigation Component with navigation links passed as props -->
-    <Navigation navLinks={navLinks} />
   </div>
 </header>
+
