--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,10 @@
 import Head from "../components/Head.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import Main from "../components/Main.astro";
+import Navigation from "../components/Navigation.astro";
+import CommonContainer from "../components/CommonContainer.astro";
+import NavigationButton from "../components/NavigationButton.astro";
 
 // Define the expected props for the layout
 interface LayoutProps {
@@ -17,13 +21,13 @@ const { title, description, navLinks } = Astro.props as LayoutProps;
 
 <html lang="en">
   <Head title={title} description={description} />
-  <body class="flex flex-col min-h-screen">
-    <Header class="flex-none" navLinks={navLinks} />
-    <main class="flex-grow flex w-full p-10">
-      <div class="flex-grow w-full bg-slate-200 shadow-lg p-16 rounded-3xl">
-        <slot />
-      </div>
-    </main>
-    <Footer class="flex-none" />
+  <body class="container mx-auto grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 max-h-screen h-screen">
+    <Header />
+	<NavigationButton />
+    <Navigation navLinks={navLinks} />
+    <Main>
+      <slot />
+    </Main>
+    <Footer />
   </body>
 </html>
