--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -3,7 +3,7 @@
 ---
 
 <main
-  class="col-span-2 p-10 overflow-auto shadow-xl rounded-3xl bg-slate-100 peer-focus:hidden no-scrollbar peer"
+  class="col-span-2 p-10 overflow-auto shadow-xl rounded-3xl bg-hippie-blue-50 peer-focus:hidden no-scrollbar peer"
 >
   <slot />
 </main>
