--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -2,8 +2,6 @@
 // Main.astro
 ---
 
-<main
-  class="col-span-2 p-10 overflow-auto shadow-xl rounded-3xl bg-hippie-blue-50 peer-focus:hidden no-scrollbar peer"
->
+<main  class="col-span-2 p-10 overflow-auto shadow-xl rounded-3xl bg-hippie-blue-50 peer-focus:opacity-0 peer-focus:h-0 peer-focus:p-0 transition-opacity duration-500 no-scrollbar peer">
   <slot />
 </main>
