--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,12 +8,12 @@ type NavLink = {
 // Retrieve `navLinks` from props
 const navLinks: NavLink[] = Astro.props.navLinks;
 ---
-<nav class="col-span-2 opacity-0 overflow-auto px-10 shadow-xl rounded-3xl peer-focus:block peer-focus:opacity-100 transition-opacity duration-1000 bg-hippie-blue">
+<nav class="col-span-2 opacity-0 overflow-auto px-10 shadow-xl rounded-3xl peer-focus:block peer-focus:opacity-100 transition-opacity duration-500 bg-hippie-blue">
   <ul class="flex grow-1 flex-col h-full w-full justify-center content-center gap-0 font-display">
     {
       navLinks.map((link) => (
-        <li class="text-center uppercase p-4 text-4xl text-white ">
-          <a class="p-4" href={link.href}>
+        <li class="text-center uppercase p-4 text-4xl text-white flex hover:text-frost transition-colors">
+          <a class="w-full" href={link.href}>
             {link.text}
           </a>
         </li>
