--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import Logo from './Logo.astro';
 
 <!-- Header Component -->
 <header class="row-span-1 col-span-1 w-full">
-  <div class="flex justify-between items-center p-6">
+  <div class="flex justify-between items-center m-6">
     <!-- Logo Component with a desired height of 100 -->
     <Logo />
 
