--- a/src/components/NavigationButton.astro
+++ b/src/components/NavigationButton.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<button class="block p-6 mt-auto peer">
+<button class="block m-6 mt-auto peer">
   <!--?xml version="1.0" encoding="UTF-8"?-->
   <svg
     class="h-[29px] w-full"
