--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer class="col-span-2">
-  <div class="flex justify-between items-center p-6">
+  <div class="flex justify-between items-center m-6">
     <div>
       <p class="text-sm">© 2024 Company Name. All rights reserved.</p>
     </div>
