--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -145,7 +145,7 @@ const navLinks = [
 
   <section class="py-12 md:py-24">
     <div class="container mx-auto px-4">
-      <div class="flex flex-wrap items-center">
+      <div class="flex flex-wrap items-center justify-center">
         <div
           class="w-full md:w-1/2 lg:w-1/2 flex justify-center px-4 mb-8 md:mb-0"
         >
@@ -155,7 +155,7 @@ const navLinks = [
             class="max-w-xs md:max-w-sm lg:max-w-lg h-auto"
           />
         </div>
-        <div class="w-full md:w-1/2 lg:w-1/2 px-4">
+        <div class="w-full md:w-1/2 lg:w-1/2 px-4 max-w-lg">
           <h2
             class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-matisse"
           >
@@ -180,12 +180,12 @@ const navLinks = [
     </div>
   </section>
 
-  <section class="py-12 md:py-24">
+  <section class="py-12 md:py-24 bg-white">
     <div class="container mx-auto px-4">
-      <div class="flex flex-wrap-reverse items-center">
-        <div class="w-full md:w-1/2 lg:w-1/2 px-4">
+      <div class="flex flex-wrap-reverse items-center justify-center ">
+        <div class="w-full md:w-1/2 lg:w-1/2 px-4 max-w-lg">
           <h2
-            class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-matisse"
+            class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-hippie-blue"
           >
             Embracing Diversity: Mends' Global Vision
           </h2>
@@ -218,9 +218,9 @@ const navLinks = [
     </div>
   </section>
 
-  <section class="py-12 md:py-24">
+  <section class="py-12 md:py-24 ">
     <div class="container mx-auto px-4">
-      <div class="flex flex-wrap items-center">
+      <div class="flex flex-wrap items-center justify-center">
         <div
           class="w-full md:w-1/2 lg:w-1/2 flex justify-center px-4 mb-8 md:mb-0"
         >
@@ -230,7 +230,7 @@ const navLinks = [
             class="max-w-xs md:max-w-sm lg:max-w-lg h-auto"
           />
         </div>
-        <div class="w-full md:w-1/2 lg:w-1/2 px-4">
+        <div class="w-full md:w-1/2 lg:w-1/2 px-4 max-w-lg">
           <h2
             class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-matisse"
           >
