--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const navLinks = [
       <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-6">
         Transforming Healthcare with Heart and Innovation
       </h1>
-      <p class="text-lg md:text-xl mb-8 text-rhino">
+      <p class="text-xl md:text-2xl mb-8 text-rhino">
         At Mends, we're leveraging AI and telemedicine to bring you closer to
         your health goals, wherever you are.
       </p>
