--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const navLinks = [
   </section>
 
   <section class="py-12 md:py-24 bg-white">
-    <div class="container mx-auto px-4">
+    <div class="container mx-auto px-4 back">
       <div class="flex flex-wrap items-center justify-center">
         <div class="w-full md:w-1/2 mb-8 md:mb-0 max-w-lg">
           <h2
