--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,14 @@
 ---
 // Import components
 import Logo from './Logo.astro';
+const { svgClasses = "" } = Astro.props; // Default to empty string if no classes are provided
 ---
 
 <!-- Header Component -->
 <header class="row-span-1 col-span-1 w-full">
   <div class="flex justify-between items-center m-6">
     <!-- Logo Component with a desired height of 100 -->
-    <Logo />
+    <Logo svgClasses=`${svgClasses}`/>
 
     <!-- Navigation Component with navigation links passed as props -->
   </div>
