--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,8 +20,8 @@ const { title, description, navLinks } = Astro.props as LayoutProps;
 <html lang="en">
   <Head title={title} description={description} />
   <body class="container mx-auto grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 max-h-screen h-screen">
-    <Header />
-    <Navigation navLinks={navLinks} />
+    <Header svgClasses="h-10"/>
+    <Navigation navLinks={navLinks} svgClasses="h-6"/>
     <Main>
       <slot />
     </Main>
