--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,15 +13,34 @@ const navLinks = [
 ];
 ---
 
-<LayoutWithoutNavigation title={title} description={description} navLinks={navLinks}>
-    <section class="h-full flex flex-col items-center justify-center text-center px-4">
-        <div class="max-w-md mx-auto">
-          <img src="path-to-404-image.svg" alt="Lost in Healthcare" class="mb-8">
-          <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-4">Oops! Page Not Found</h1>
-          <p class="text-lg md:text-xl mb-8">It seems you've found a page that doesn't exist or has been moved. Don't worry, we've got plenty of ways to get you back on track.</p>
-          <a href="/" class="inline-block bg-matisse text-white font-bold py-2 px-6 rounded-full hover:bg-rhino transition duration-300">Return Home</a>
-          <p class="mt-4">or</p>
-          <a href="/contact" class="inline-block text-matisse hover:text-rhino transition duration-300">Contact Us</a>
-        </div>
-      </section>      
+<LayoutWithoutNavigation
+  title={title}
+  description={description}
+  navLinks={navLinks}
+>
+  <section
+    class="h-full flex flex-col items-center justify-center text-center px-4"
+  >
+    <div class="max-w-md mx-auto">
+      <img src="/images/404.svg" alt="Lost in Healthcare" class="max-w-sm mx-auto mb-8 p-10" />
+      <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-4">
+        Oops! Page Not Found
+      </h1>
+      <p class="text-lg md:text-xl mb-8">
+        It seems you've found a page that doesn't exist or has been moved. Don't
+        worry, we've got plenty of ways to get you back on track.
+      </p>
+      <a
+        href="/"
+        class="inline-block bg-matisse text-white font-bold py-2 px-6 rounded-full hover:bg-rhino transition duration-300"
+        >Return Home</a
+      >
+      <p class="mt-4">or</p>
+      <a
+        href="/contact"
+        class="inline-block text-matisse hover:text-rhino transition duration-300"
+        >Contact Us</a
+      >
+    </div>
+  </section>
 </LayoutWithoutNavigation>
