--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -10,7 +10,7 @@ const navLinks: NavLink[] = Astro.props.navLinks;
 const { svgClasses = "" } = Astro.props; // Default to empty string if no classes are provided
 ---
 
-<button class="block m-6 mt-auto peer nav-button">
+<button class="block p-3 md:p-6 mt-auto peer nav-button">
   <!--?xml version="1.0" encoding="UTF-8"?-->
   <svg
     class=`${svgClasses}`
