--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -28,6 +28,7 @@ import '../styles/global.css';
   <meta property="twitter:description" content={description} />
   <meta property="twitter:image" content={image} />
   <link rel="canonical" href={url} />
+  <link rel="sitemap" href="/sitemap-index.xml" />
   <meta name="theme-color" content="#ffffff"/>
   <link rel="stylesheet" href="https://use.typekit.net/dwq1bvn.css">
 </head>
