--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const navLinks = [
 <Layout title={title} description={description} navLinks={navLinks}>
   <!-- Hero Section -->
   <section
-    class="container mx-auto px-4 py-12 md:py-24 flex flex-wrap items-center h-full"
+    class="container mx-auto px-4 py-12 md:py-24 flex flex-wrap items-center min-h-full"
   >
     <div class="w-full md:w-1/2 flex justify-center mb-8 md:mb-0">
       <img
