--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -15,7 +15,7 @@ import '../styles/global.css';
   <title>{title}</title>
   <meta name="description" content={description} />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <meta name="generator" content="Astro" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content={url} />
