--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -6,16 +6,25 @@ interface Props {
   url?: string; // Added to define `og:url` and `twitter:url` dynamically
 }
 
-const { title, description = "Default description if none provided", image = "/default-social-image.png", url = Astro.url } = Astro.props;
+const {
+  title,
+  description = "Default description if none provided",
+  image = "/default-social-image.png",
+  url = Astro.url,
+} = Astro.props;
 
-import '../styles/global.css';
+import "../styles/global.css";
 ---
+
 <head>
   <meta charset="UTF-8" />
   <title>{title}</title>
   <meta name="description" content={description} />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+  <meta
+    name="viewport"
+    content="width=device-width; initial-scale=1; viewport-fit=cover"
+  />
   <meta name="generator" content="Astro" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content={url} />
@@ -29,6 +38,6 @@ import '../styles/global.css';
   <meta property="twitter:image" content={image} />
   <link rel="canonical" href={url} />
   <link rel="sitemap" href="/sitemap-index.xml" />
-  <meta name="theme-color" content="#ffffff"/>
-  <link rel="stylesheet" href="https://use.typekit.net/dwq1bvn.css">
+  <meta name="theme-color" content="#ffffff" />
+  <link rel="stylesheet" href="https://use.typekit.net/dwq1bvn.css" />
 </head>
