--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import LayoutWithoutNavigation from "../layouts/LayoutWithoutNavigation.astro";
+import LayoutWithoutNavigation from "/src/layouts/LayoutWithoutNavigation.astro";
 
 // Define metadata and navigation links for this page
 const title = "Mends";
