--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -23,7 +23,7 @@ import "../styles/global.css";
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta
     name="viewport"
-    content="width=device-width; initial-scale=1; viewport-fit=cover"
+    content="width=device-width, initial-scale=1, viewport-fit=cover"
   />
   <meta name="generator" content="Astro" />
   <meta property="og:type" content="website" />
